update meta tag

--- a/demo.html
+++ b/demo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta charset="utf-8">
 <title>Demo j-accordion.js</title>
 <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?3.12.0/cssreset/cssreset-min.css&3.12.0/cssfonts/cssfonts-min.css&3.12.0/cssgrids/cssgrids-min.css&3.12.0/cssbase/cssbase-min.css">
 <link rel="stylesheet" type="text/css" href="style.css">
